// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays the PartTypeData component for a new part type with no attributes 1`] = `
<Fragment>
  <FormTextInput
    className=""
    dataType="text"
    error=""
    fieldName="name_new"
    label=""
    list=""
    onClick={[Function]}
    placeholder="add new"
    size={30}
    title=""
    value="part one"
  />
  <label
    htmlFor="can_be_substituted_new"
  >
    Can Be Substituted?
  </label>
  <input
    checked={false}
    id="can_be_substituted_new"
    name="can_be_substituted_new"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="can_be_omitted_new"
  >
    Can Be Omitted?
  </label>
  <input
    checked={true}
    id="can_be_omitted_new"
    name="can_be_omitted_new"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="customer_visible_new"
  >
    Customer Facing?
  </label>
  <input
    checked={true}
    id="customer_visible_new"
    name="customer_visible_new"
    onChange={[Function]}
    type="checkbox"
  />
  <PartTypeAttributes
    attributes={Array []}
    partTypeKey="new"
  />
  <PartTypeSynonyms
    label="synonyms"
    partTypeKey="new"
    synonyms={Array []}
  />
</Fragment>
`;

exports[`displays the PartTypeData component for an existing part type with attributes 1`] = `
<Fragment>
  <FormTextInput
    className=""
    dataType="text"
    error=""
    fieldName="name_21"
    label=""
    list=""
    onClick={[Function]}
    placeholder="add new"
    size={30}
    title=""
    value="part one"
  />
  <label
    htmlFor="can_be_substituted_21"
  >
    Can Be Substituted?
  </label>
  <input
    checked={false}
    id="can_be_substituted_21"
    name="can_be_substituted_21"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="can_be_omitted_21"
  >
    Can Be Omitted?
  </label>
  <input
    checked={true}
    id="can_be_omitted_21"
    name="can_be_omitted_21"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="customer_visible_21"
  >
    Customer Facing?
  </label>
  <input
    checked={true}
    id="customer_visible_21"
    name="customer_visible_21"
    onChange={[Function]}
    type="checkbox"
  />
  <div>
    Attributes: 0
    Synonyms: 0
  </div>
</Fragment>
`;

exports[`displays the PartTypeData component for an new part type with attributes 1`] = `
<Fragment>
  <FormTextInput
    className=""
    dataType="text"
    error=""
    fieldName="name_dummy2"
    label=""
    list=""
    onClick={[Function]}
    placeholder="add new"
    size={30}
    title=""
    value="part one"
  />
  <label
    htmlFor="can_be_substituted_dummy2"
  >
    Can Be Substituted?
  </label>
  <input
    checked={false}
    id="can_be_substituted_dummy2"
    name="can_be_substituted_dummy2"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="can_be_omitted_dummy2"
  >
    Can Be Omitted?
  </label>
  <input
    checked={true}
    id="can_be_omitted_dummy2"
    name="can_be_omitted_dummy2"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    htmlFor="customer_visible_dummy2"
  >
    Customer Facing?
  </label>
  <input
    checked={true}
    id="customer_visible_dummy2"
    name="customer_visible_dummy2"
    onChange={[Function]}
    type="checkbox"
  />
  <PartTypeAttributes
    attributes={
      Array [
        "attribute1",
        "attribute2",
      ]
    }
    partTypeKey="dummy2"
  />
  <PartTypeSynonyms
    label="synonyms"
    partTypeKey="dummy2"
    synonyms={
      Array [
        "synonym1",
        "synonym1",
      ]
    }
  />
</Fragment>
`;
